--- a/DayCare/DayCare/packages.config
+++ b/DayCare/DayCare/packages.config
@@ -2,7 +2,10 @@
 <packages>
   <package id="Caliburn.Micro" version="3.0.0-beta1" targetFramework="net452" />
   <package id="Caliburn.Micro.Core" version="3.0.0-beta1" targetFramework="net452" />
+  <package id="Caliburn.Micro.Logging" version="2.0.3.0" targetFramework="net45" />
+  <package id="Caliburn.Micro.Logging.NLog" version="2.0.3.0" targetFramework="net45" />
   <package id="ClosedXML" version="0.76.0" targetFramework="net45" />
   <package id="DocumentFormat.OpenXml" version="2.5" targetFramework="net45" />
   <package id="LiteDB" version="2.0.0-rc" targetFramework="net45" />
+  <package id="NLog" version="2.1.0" targetFramework="net45" />
 </packages>
