--- a/DayCare/DayCare/app.config
+++ b/DayCare/DayCare/app.config
@@ -17,7 +17,7 @@
   <applicationSettings>
     <DayCare.Properties.Settings>
       <setting name="PresenseMode" serializeAs="String">
-        <value>True</value>
+        <value>False</value>
       </setting>
     </DayCare.Properties.Settings>
   </applicationSettings>
