--- a/DayCare/DayCare/app.config
+++ b/DayCare/DayCare/app.config
@@ -19,6 +19,9 @@
       <setting name="PresenseMode" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="SleepTime" serializeAs="String">
+        <value>08/20/2016 23:30:00</value>
+      </setting>
     </DayCare.Properties.Settings>
   </applicationSettings>
 </configuration>
