--- a/DayCare/DayCare/Properties/Settings.settings
+++ b/DayCare/DayCare/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="PresenseMode" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="SleepTime" Type="System.DateTime" Scope="Application">
+      <Value Profile="(Default)">08/20/2016 23:30:00</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
