--- a/DayCare/DayCare/Properties/Settings.settings
+++ b/DayCare/DayCare/Properties/Settings.settings
@@ -3,10 +3,13 @@
   <Profiles />
   <Settings>
     <Setting Name="PresenseMode" Type="System.Boolean" Scope="Application">
-      <Value Profile="(Default)">False</Value>
+      <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="SleepTime" Type="System.DateTime" Scope="Application">
       <Value Profile="(Default)">08/20/2016 23:30:00</Value>
+    </Setting>
+    <Setting Name="InvoiceFolder" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">E:\Temp\Invoices</Value>
     </Setting>
   </Settings>
 </SettingsFile>
