--- a/DayCare/DayCare/app.config
+++ b/DayCare/DayCare/app.config
@@ -17,7 +17,7 @@
   <applicationSettings>
     <DayCare.Properties.Settings>
       <setting name="PresenseMode" serializeAs="String">
-        <value>False</value>
+        <value>True</value>
       </setting>
       <setting name="SleepTime" serializeAs="String">
         <value>08/20/2016 23:30:00</value>
